<resources>
    <string name="app_name">Basketball Bonanza</string>
    <string name="international">International</string>
    <string name="error_with_api_call">Oops something went wrong!</string>
    <string name="logo">Logo</string>
    <string name="east_team_button">East</string>
    <string name="west_team_button">West</string>
    <string name="box_score_button_text">Box Score</string>
    <string name="away_team_text">AWAY</string>
    <string name="home_team_text">HOME</string>
    <string name="team_1_logo_cd">Team 1 Logo</string>
    <string name="tickets_button_text">Tickets</string>
    <string name="filter_button_all">Countries: All</string>
    <string name="filter_button_1">Countries: Only USA</string>
    <string name="filter_button_2">Countries: International</string>
    <string name="players_title_detail_page">Players</string>
    <string name="capacity">Capacity:</string>
    <string name="stadium">Stadium:</string>
    <string name="your_favourite_team_title">Your Favourite Team</string>
    <string name="favourite_team_confirm_cta">Confirm</string>
    <string name="east_main_page">East</string>
    <string name="west_main_page">West</string>
    <string name="alternate_retry_api_call">Retry</string>
    <string name="default_player_picker_string">Country: International</string>
    <string name="information_player_detail_title">Information</string>
    <string name="years_pro_table_text">Years Pro:</string>
    <string name="n_a">n/a</string>
    <string name="recent_games_title_text">Recent Games</string>
    <string name="team_title_text">Team</string>
    <string name="weight_table_text">Weight:</string>
    <string name="height_table_text">Height:</string>
    <string name="first_year_table_text">First Year:</string>
    <string name="player_id_table_text">Player ID:</string>
    <string name="country_table_text">Country:</string>
    <string name="college_table_text">College:</string>
    <string name="second_team_logo_content_description">SecondTeamLogo</string>
    <string name="team_1_table_header">Team 1</string>
    <string name="team_2_table_header">Team 2</string>
    <string name="fast_break_points_table_row">Fast Break Points</string>
    <string name="default_table_value_schedule">0</string>
    <string name="points_in_paint_table_row">Points in Paint</string>
    <string name="biggest_lead_table_row">Biggest Lead</string>
    <string name="points_off_turnovers_table_row">Points off turnovers</string>
    <string name="ftp_table_row">FTP</string>
    <string name="off_rebounds_table_row">Off Rebounds</string>
    <string name="def_rebounds_table_row">Def Rebounds</string>
    <string name="assists_table_row">Assists</string>
    <string name="plus_minus_table_row">Plus Minus</string>
    <string name="customisation_settings_settings_title">Customisation Settings</string>
    <string name="change_favourite_team_title">Change Favourite Team</string>
    <string name="recent_games_player_profile_title">Recent Games - Player Profile</string>
    <string name="recent_games_player_profile_subtitle">Choose Up To 4 Categories</string>
    <string name="google_maps_stadium_image">GoogleMapsStadiumImage</string>
    <string name="player_image_header_for_detail_page_content_description">Player Image Header For Detail Page</string>
    <string name="error_states_retry_button">Retry</string>
    <string name="close_drawer_icon">Close Drawer Icon</string>
    <string name="favourite_team_icon_content_description">Favourite Team Icon</string>
    <string name="secondary_logo_schedule_card">Secondary Logo Schedule Card</string>
    <string name="teams_selection_image_icon">teams_selection_image_icon</string>
    <string name="team_logo_content_description">Team Logo</string>
    <string name="plus_minus">Plus Minus</string>
    <string name="free_throws_made">Free Throws Made</string>
    <string name="ft">FT%</string>
    <string name="blocks">Blocks</string>
    <string name="steals">Steals</string>
    <string name="overall_field_goal_percentage">Overall Field Goal Percentage</string>
    <string name="rebounds_per_game">Rebounds Per Game</string>
    <string name="assists_per_game">Assists Per Game</string>
    <string name="points_per_game">Points Per Game</string>
    <string name="home_menu">Home</string>
    <string name="teams_menu">Teams</string>
    <string name="schedule_menu">Schedule</string>
    <string name="players_menu">Players</string>
    <string name="stadiums_menu">Stadiums</string>
    <string name="settings_menu">Settings</string>
    <string name="empty_name"> </string>
    <string name="InformationNotaAvaliablePlayerCard">Infomation Not Available</string>
    <string name="PlayerIsActive">Active</string>
    <string name="PlayerIsNotActive">Not Active</string>
    <string name="halfTimeStringValue">Half Time</string>
    <string name="QuarterStringValueScheduleCard">\"Quarter: \"</string>
    <string name="standings_text">Standings</string>
    <string name="favourite_team">Favourite Team</string>
    <string name="basic_title">Basketball Bonaza</string>
    <string name="standings_table_icon">Standings Table Icon</string>

</resources>