<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.home.teams.detail.PlayersDetailFragment"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_player_detail_title"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textSize="26sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:gravity="center">

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/years_pro_table_text"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_years_pro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/college_table_text"
                    android:textSize="14sp"
                    android:layout_margin="1dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_college"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/country_table_text"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/player_id_table_text"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_player_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/first_year_table_text"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_first_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/height_table_text"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/weight_table_text"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/players_detail_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/n_a"
                    android:padding="1dp"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="1"
                    />
            </TableRow>


        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_title_text"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="26sp"/>

        <include
            layout="@layout/playerteam_icon_item"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/recent_game_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_games_title_text"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="26sp"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <include
                layout="@layout/loading_error_states"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableLayout
                android:id="@+id/team_player_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:gravity="center">

            </TableLayout>

        </FrameLayout>




    </LinearLayout>






</androidx.core.widget.NestedScrollView>